# Graficas_2_P2

./: .gitignore  CMakeLists.txt  README.md
Graficas_2_P2/: CMakeLists.txt
Graficas_2_P2/src/: Graficas_2_P2.cpp  Graficas_2_P2.h  Shader.cpp  Shader.h
Graficas_2_P2/src/BuffersManagement/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Graficas_2_P2/src/CameraManagement/: Camera.cpp  Camera.h
Graficas_2_P2/src/ElementManagement/: Gizmos.cpp  Gizmos.h  Quad.cpp  Quad.h
Graficas_2_P2/src/ModelManagement/: VolumenTexture.cpp  VolumenTexture.h
assets/shaders/: gizmosShader.frag  gizmosShader.vert  rayMarchingShader.frag  rayMarchingShader.vert
